lib/flux/apps/servarr/chaptarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chaptarr
  labels:
    app.kubernetes.io/name: chaptarr
    app.kubernetes.io/instance: chaptarr
    app.kubernetes.io/component: books
    app.kubernetes.io/part-of: servarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: chaptarr
      app.kubernetes.io/instance: chaptarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: chaptarr
        app.kubernetes.io/instance: chaptarr
        app.kubernetes.io/component: books
        app.kubernetes.io/part-of: servarr
      annotations:
        checksum/config: ${config_checksum}
    spec:
      enableServiceLinks: false
      containers:
        - name: chaptarr
          image: docker.io/chaptarr/chaptarr:0.9.965@sha256:bb00d67cbe1485d1cd61ef178362a29b42aa08f86b290841aab4b115ad2647a6 # {"$imagepolicy": "servarr:chaptarr"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8789
          volumeMounts:
            - name: data
              mountPath: /config
            - name: media
              mountPath: /books
              subPath: books
            - name: media
              mountPath: /downloads
              subPath: unsorted
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: chaptarr-data
        - name: media
          persistentVolumeClaim:
            claimName: chaptarr-media
        - name: config
          secret:
            secretName: ${config_secret}
