lib/flux/apps/servarr/chaptarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chaptarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: chaptarr
    app.kubernetes.io/instance: chaptarr
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
